# Cluster-Compliance-Checker

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  package-lock.json  pyproject.toml  setup.cfg
.github/workflows/: build.yml  release.yml  validation.yml
cluster_compliance_checker/: core.py  dependencies.py  discovery.py  enums.py  errors.py  main.py  manifests.py  report_request_handler.py  requirements.py  schema.py  spawner.py  template.py  util.py
cluster_compliance_checker/checks/: disk_performance.py  external_services.py  kernel.py  kubernetes.py  performance.py  resources.py  storage.py
cluster_compliance_checker/templates/: check.html.jinja2  report.html.jinja2  section.html.jinja2
docs/: SCHEMA.md  WRITING_CHECKS.md
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  rbac.yaml  statefulset.yaml
statics/css/: main.css
test/: test_checks.py  test_core.py  test_discovery.py  test_major_problems.py  test_schema.py  test_template.py
test/mock_checks/: bar.py  foo.py
test/mock_data/: invalid_schema_incorrect_section_name.json  valid_schema.json  valid_schema_empty_sections.json  valid_schema_mouthful_check_description.json  valid_schema_mouthful_section_description.json  valid_schema_with_major_problem.json
test/mock_html/: invalid_schema_incorrect_section_name.html  valid_schema.html  valid_schema_empty_sections.html  valid_schema_mouthful_check_description.html  valid_schema_mouthful_section_description.html  (+1 more)
tools/: Dockerfile
