[tool.poetry]
name = "cluster-compliance-checker"
version = "1.1.0"
description = "Tool used to ensure compliance of provided kubernetes cluster"
authors = [
  "Piotr Miszkiel <p.miszkiel@piwik.pro>",
  "Michał Mieszczak <m.mieszczak@piwik.pro>",
]
packages = [{ include = "cluster_compliance_checker" }]

[tool.poetry.scripts]
cluster-compliance-checker = 'cluster_compliance_checker.main:entrypoint'
pp3c = 'cluster_compliance_checker.main:entrypoint'

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
kubernetes = "^21.7.0"
rich = "^12.4.4"
typer = "^0.4.1"
packaging = "^21.3"
dependency-injector = "^4.39.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
beautifulsoup4 = "^4.11.1"
dacite = "^1.6.0"
pylama = { version = "^8.3.8", extras = ["all"] }
black = "^22.3.0"
kubernetes-stubs = "^21.7.0"

[tool.autopep8]
max_line_length = 100

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
